@@ -1,0 +1,17 @@
+////
+This file is generated! See scripts/docs_collector.py
+////
+
+[[metricbeat-metricset-munin-node]]
+=== Munin node metricset
+
+experimental[]
+
+include::../../../module/munin/node/_meta/docs.asciidoc[]
+
+
+==== Fields
+
+For a description of each field in the metricset, see the
+<<exported-fields-munin,exported fields>> section.
+
